  DefaultLocalEntityConnection, EntityResultPacker and EntityResultIterator moved up to package level
  DefaultLocalEntityConnection.getReferencedKeys() moved to Entities
  jminor-plugin-jackson-json module added
  Jackson json improvements
  Jackson json, domain related moved to .domain and .db package created, ConditionObjectMapper added
  Jackson json, CustomCondition implemented
  ValueChange.isInitialization() reintroduced, used after all
  AbstractFilteredTableModel.filterContents() bug fixed, now calls fireTableDataChanged() after filtering, otherwise table did not repaint correctly
  Entity.Definition.getForeignKeyProperties(entityId) renamed to getForeignKeyReferences(), getForeignKeyProperties(columnPropertyId) added
  DefaultValueMap.handleRemove() removed
  DefaultEntity no longer removes column property values when removing the associated foreign key value
  DefaultEntity.removeInvalidForeignKeyValues() added, called in handlePut(), removes foreign key values that don't fit the value being put
  DefaultValueMap no longer calls handlePut() during setAs()
  DefaultKey.hashCodeDirty initialized to true instead of false, which then relied on handlePut()
  DefaultLocalEntityConnection.lockAndCheckIfModified() bug fixed, only selected writable properties, which could then exclude primary key properties
  DefaultEntity.initializeAndCacheReferencedKey() refactored
  DefaultEntity.DefaultKey moved up to package level and renamed DefaultEntityKey
  DefaultEntityKey now overrides validateAndPrepare(), validation moved from handlePut()
  DefaultProperty.validateType() now returns the value
  DefaultEntity and DefaultEntityKey now validate types on deserialization
  DefaultLocalEntityConnection.lockAndCheckIfModified() new bug fixed, now only selects writable along with primary key properties
  DefaultEntityDefinition.getSelectableColumnProperties() now uses old school for loop instead of stream
  Entity.Definition.getProperties(includeHidden) removed