@@ -391,50 +391,6 @@ public class Domain implements Entity.Definition.Provider, Serializable {
   }
 
   /**
-   * Adds a new {@link Entity.Definition} to this domain model, using the {@code entityId} as table name.
-   * Returns the {@link Entity.Definition} instance for further configuration.
-   * @param entityId the id uniquely identifying the entity type
-   * @param propertyBuilders the {@link Property.Builder} objects to base this entity on. In case a select query is specified
-   * for this entity, the property order must match the select column order.
-   * @return a {@link Entity.Definition.Builder}
-   * @throws IllegalArgumentException in case the entityId has already been used to define an entity type or if
-   * no primary key property is specified
-   */
-  public final Entity.Definition.Builder define(final String entityId, final Property.Builder... propertyBuilders) {
-    return define(entityId, entityId, propertyBuilders);
-  }
-
-  /**
-   * Adds a new {@link Entity.Definition} to this domain model.
-   * Returns the {@link Entity.Definition} instance for further configuration.
-   * @param entityId the id uniquely identifying the entity type
-   * @param tableName the name of the underlying table
-   * @param propertyBuilders the {@link Property.Builder} objects to base the entity on. In case a select query is specified
-   * for this entity, the property order must match the select column order.
-   * @return a {@link Entity.Definition.Builder}
-   * @throws IllegalArgumentException in case the entityId has already been used to define an entity type or if
-   * no primary key property is specified
-   */
-  public final Entity.Definition.Builder define(final String entityId, final String tableName,
-                                                final Property.Builder... propertyBuilders) {
-    requireNonNull(entityId, ENTITY_ID_PARAM);
-    requireNonNull(tableName, "tableName");
-    if (entityDefinitions.containsKey(entityId) && !ALLOW_REDEFINE_ENTITY.get()) {
-      throw new IllegalArgumentException("Entity has already been defined: " + entityId + ", for table: " + tableName);
-    }
-    final Map<String, Property> propertyMap = initializePropertyMap(entityId, propertyBuilders);
-    final List<ColumnProperty> columnProperties = unmodifiableList(getColumnProperties(propertyMap.values()));
-    final List<ForeignKeyProperty> foreignKeyProperties = unmodifiableList(getForeignKeyProperties(propertyMap.values()));
-    final List<TransientProperty> transientProperties = unmodifiableList(getTransientProperties(propertyMap.values()));
-
-    final DefaultEntityDefinition entityDefinition = new DefaultEntityDefinition(domainId, entityId,
-            tableName, propertyMap, columnProperties, foreignKeyProperties, transientProperties, new DefaultEntityValidator());
-    entityDefinitions.put(entityId, entityDefinition);
-
-    return entityDefinition.builder();
-  }
-
-  /**
    * @return all {@link Entity.Definition}s found in this domain model
    */
   public final Collection<Entity.Definition> getEntityDefinitions() {
@@ -615,6 +571,50 @@ public class Domain implements Entity.Definition.Provider, Serializable {
     }
 
     return definition;
+  }
+
+  /**
+   * Adds a new {@link Entity.Definition} to this domain model, using the {@code entityId} as table name.
+   * Returns the {@link Entity.Definition} instance for further configuration.
+   * @param entityId the id uniquely identifying the entity type
+   * @param propertyBuilders the {@link Property.Builder} objects to base this entity on. In case a select query is specified
+   * for this entity, the property order must match the select column order.
+   * @return a {@link Entity.Definition.Builder}
+   * @throws IllegalArgumentException in case the entityId has already been used to define an entity type or if
+   * no primary key property is specified
+   */
+  protected final Entity.Definition.Builder define(final String entityId, final Property.Builder... propertyBuilders) {
+    return define(entityId, entityId, propertyBuilders);
+  }
+
+  /**
+   * Adds a new {@link Entity.Definition} to this domain model.
+   * Returns the {@link Entity.Definition} instance for further configuration.
+   * @param entityId the id uniquely identifying the entity type
+   * @param tableName the name of the underlying table
+   * @param propertyBuilders the {@link Property.Builder} objects to base the entity on. In case a select query is specified
+   * for this entity, the property order must match the select column order.
+   * @return a {@link Entity.Definition.Builder}
+   * @throws IllegalArgumentException in case the entityId has already been used to define an entity type or if
+   * no primary key property is specified
+   */
+  protected final Entity.Definition.Builder define(final String entityId, final String tableName,
+                                                   final Property.Builder... propertyBuilders) {
+    requireNonNull(entityId, ENTITY_ID_PARAM);
+    requireNonNull(tableName, "tableName");
+    if (entityDefinitions.containsKey(entityId) && !ALLOW_REDEFINE_ENTITY.get()) {
+      throw new IllegalArgumentException("Entity has already been defined: " + entityId + ", for table: " + tableName);
+    }
+    final Map<String, Property> propertyMap = initializePropertyMap(entityId, propertyBuilders);
+    final List<ColumnProperty> columnProperties = unmodifiableList(getColumnProperties(propertyMap.values()));
+    final List<ForeignKeyProperty> foreignKeyProperties = unmodifiableList(getForeignKeyProperties(propertyMap.values()));
+    final List<TransientProperty> transientProperties = unmodifiableList(getTransientProperties(propertyMap.values()));
+
+    final DefaultEntityDefinition entityDefinition = new DefaultEntityDefinition(domainId, entityId,
+            tableName, propertyMap, columnProperties, foreignKeyProperties, transientProperties, new DefaultEntityValidator());
+    entityDefinitions.put(entityId, entityDefinition);
+
+    return entityDefinition.builder();
   }
 
   private Map<String, Property> initializePropertyMap(final String entityId, final Property.Builder... propertyBuilders) {
