@@ -5361,3 +5361,4 @@
   DefaultLocalEntityConnection.lockAndCheckIfModified() new bug fixed, now only selects writable along with primary key properties
   DefaultEntityDefinition.getSelectableColumnProperties() now uses old school for loop instead of stream
   Entity.Definition.getProperties(includeHidden) removed
+  Domain.define() now protected
